@@ -4,7 +4,6 @@
 -XX:MaxMetaspaceSize=512m
 -XX:+UseCompactObjectHeaders
 -XX:+UseZGC
--XX:+ZGenerational
 -XX:+UseStringDeduplication
 -XX:+TieredCompilation
 -XX:TieredStopAtLevel=4
